--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.9 (1.9~rc2-1ubuntu1~hnakamur1) xenial; urgency=medium
+
+  * New upstream release.
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Tue, 08 Aug 2017 09:10:14 +0900
+
 golang-1.9 (1.9~rc1-1ubuntu1~hnakamur1-xenial) xenial; urgency=medium
 
   * New upstream release.
