--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.9 (1.9.2-1ubuntu1~hnakamur1) xenial; urgency=medium
+
+  * Imported Upstream version 1.9.2
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Thu, 26 Oct 2017 14:42:44 +0900
+
 golang-1.9 (1.9.1-1ubuntu1~hnakamur1) xenial; urgency=medium
 
   * Imported Upstream version 1.9.1
