--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.9 (1.9.3-1ubuntu1~hnakamur1) xenial; urgency=medium
+
+  * Imported Upstream version 1.9.3
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Tue, 23 Jan 2018 08:58:36 +0900
+
 golang-1.9 (1.9.2-1ubuntu1~hnakamur1) xenial; urgency=medium
 
   * Imported Upstream version 1.9.2
