--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.10 (1.10~rc1-1ubuntu1~hnakamur1) xenial; urgency=medium
+
+  * Imported Upstream version 1.10rc1
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Fri, 26 Jan 2018 22:53:00 +0900
+
 golang-1.9 (1.9.3-1ubuntu1~hnakamur1) xenial; urgency=medium
 
   * Imported Upstream version 1.9.3
