--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.10 (1.10.1-1ubuntu1ppa1~ubuntu16.04.1) xenial; urgency=medium
+
+  * Imported Upstream version 1.10.1
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Thu, 05 Apr 2018 11:41:04 +0900
+
 golang-1.10 (1.10-1ubuntu1~hnakamur1) xenial; urgency=medium
 
   * Imported Upstream version 1.10
