--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+golang-1.10 (1.10.3-1ubuntu1ppa1~ubuntu18.04.1) bionic; urgency=medium
+
+  * New upstream version 1.10.3
+  * Change target to Ubuntu 18.04 LTS
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Fri, 08 Jun 2018 16:23:33 +0900
+
 golang-1.10 (1.10.1-1ubuntu1ppa1~ubuntu16.04.1) xenial; urgency=medium
 
   * Imported Upstream version 1.10.1
