--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.11 (1.11.5-1ubuntu1ppa1~ubuntu18.04.1) bionic; urgency=medium
+
+  * Backport to Ubuntu 18.04 LTS
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Sun, 03 Feb 2019 17:06:34 +0900
+
 golang-1.11 (1.11.5-1) unstable; urgency=high
 
   * New upstream version 1.11.5, fixing CVE-2019-6486
