--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.12 (1.12~beta2-2ubuntu1ppa1~ubuntu18.04.1) bionic; urgency=medium
+
+  * Backport to Ubuntu 18.04 LTS 
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Sun, 03 Feb 2019 21:31:07 +0900
+
 golang-1.12 (1.12~beta2-2) unstable; urgency=medium
 
   * Refresh patch Reproducible BUILD_PATH_PREFIX_MAP.
