--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.12 (1.12-1ubuntu1ppa1~18.04.1) bionic; urgency=medium
+
+  * New upstream version 1.12
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Tue, 26 Feb 2019 10:13:01 +0900
+
 golang-1.12 (1.12~rc1-1ubuntu1ppa2~ubuntu18.04.1) bionic; urgency=medium
 
   * Set GOCACHE environment explicitly for build on PPA
