--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.12 (1.12.2-1ubuntu1ppa2~18.04.1) bionic; urgency=medium
+
+  * Make test verbose
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Sat, 06 Apr 2019 11:55:46 +0900
+
 golang-1.12 (1.12.2-1ubuntu1ppa1~18.04.1) bionic; urgency=medium
 
   * New upstream version 1.12.2
