--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.12 (1.12.4-1ubuntu1ppa1~18.04.1) bionic; urgency=medium
+
+  * New upstream version 1.12.4
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Fri, 12 Apr 2019 12:11:20 +0900
+
 golang-1.12 (1.12.3-1ubuntu1ppa1~18.04.1) bionic; urgency=medium
 
   * New upstream version 1.12.3
