--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.12 (1.12.5-1ubuntu1ppa1~18.04.1) bionic; urgency=medium
+
+  * New upstream version 1.12.5
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Tue, 07 May 2019 22:51:43 +0900
+
 golang-1.12 (1.12.4-1ubuntu1ppa1~18.04.1) bionic; urgency=medium
 
   * New upstream version 1.12.4
