--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-1.12 (1.12.9-1ppa1~bionic) bionic; urgency=medium
+
+  * New upstream version 1.12.9
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Fri, 16 Aug 2019 09:32:16 +0900
+
 golang-1.12 (1.12.8-1ppa1~bionic) bionic; urgency=medium
 
   * New upstream version 1.12.8
